--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@midwayjs/info": "^3.0.0",
     "@midwayjs/koa": "^3.0.0",
     "@midwayjs/logger": "^2.14.0",
+    "@midwayjs/swagger": "^3.11.15",
     "@midwayjs/typeorm": "^3.11.11",
+    "@midwayjs/upload": "^3.11.11",
     "@midwayjs/validate": "^3.0.0",
     "@midwayjs/view-nunjucks": "^3.11.11",
     "mysql": "^2.18.1",
@@ -26,6 +28,7 @@
     "cross-env": "^6.0.0",
     "jest": "^29.2.2",
     "mwts": "^1.0.5",
+    "swagger-ui-dist": "^5.1.3",
     "ts-jest": "^29.0.3",
     "typescript": "~4.8.0"
   },
