--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@midwayjs/bootstrap": "^3.0.0",
     "@midwayjs/core": "^3.0.0",
+    "@midwayjs/cos": "^3.11.15",
     "@midwayjs/cross-domain": "^3.11.11",
     "@midwayjs/decorator": "^3.0.0",
     "@midwayjs/info": "^3.0.0",
