更新校验方式

--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "@midwayjs/cos": "^3.11.15",
     "@midwayjs/cross-domain": "^3.11.11",
     "@midwayjs/decorator": "^3.0.0",
+    "@midwayjs/i18n": "^3.11.15",
     "@midwayjs/info": "^3.0.0",
     "@midwayjs/koa": "^3.0.0",
     "@midwayjs/logger": "^2.14.0",
     "@midwayjs/swagger": "^3.11.15",
     "@midwayjs/typeorm": "^3.11.11",
     "@midwayjs/upload": "^3.11.11",
-    "@midwayjs/validate": "^3.0.0",
+    "@midwayjs/validate": "^3.11.15",
     "@midwayjs/view-nunjucks": "^3.11.11",
     "mysql": "^2.18.1",
     "typeorm": "^0.3.17"
