--- a/package.json
+++ b/package.json
@@ -11,26 +11,31 @@
     "@midwayjs/decorator": "^3.0.0",
     "@midwayjs/i18n": "^3.11.15",
     "@midwayjs/info": "^3.0.0",
+    "@midwayjs/jwt": "^3.11.15",
     "@midwayjs/koa": "^3.0.0",
     "@midwayjs/logger": "^2.14.0",
+    "@midwayjs/redis": "^3.11.15",
     "@midwayjs/swagger": "^3.11.15",
     "@midwayjs/typeorm": "^3.11.11",
     "@midwayjs/upload": "^3.11.11",
     "@midwayjs/validate": "^3.11.15",
     "@midwayjs/view-nunjucks": "^3.11.11",
+    "bcryptjs": "^2.4.3",
     "mysql": "^2.18.1",
+    "swagger-ui-dist": "^5.1.3",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@midwayjs/cli": "^2.0.0",
     "@midwayjs/mock": "^3.0.0",
+    "@types/ioredis": "^5.0.0",
     "@types/jest": "^29.2.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/koa": "^2.13.4",
     "@types/node": "14",
     "cross-env": "^6.0.0",
     "jest": "^29.2.2",
     "mwts": "^1.0.5",
-    "swagger-ui-dist": "^5.1.3",
     "ts-jest": "^29.0.3",
     "typescript": "~4.8.0"
   },
